added graphs to smoking

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -6,18 +6,26 @@ table {
   width: 100%;
   border-collapse: collapse;
   table-layout: fixed;
-  
+
   td {
     @include core-16($tabular-numbers: true);
     text-align: right;
     vertical-align: text-top;
-    padding: 10px 0 5px 0px;
+    padding: 10px 0 10px 10px;
     
     &:first-of-type {
       @include core-16($tabular-numbers: false);
       text-align: left;
+      padding-left: 0px;
     }
   }
+
+  thead {
+    td {
+      font-weight: bold !important;
+    }
+  }
+  
 
   tbody {
     td {
