--- a/app/assets/stylesheets/typography-prototype.scss
+++ b/app/assets/stylesheets/typography-prototype.scss
@@ -41,3 +41,15 @@ ul {
   margin-top: 40px;
   border-top: 1px solid $border-colour;
 }
+
+.margin-bottom-small {
+  margin-bottom: 5px;
+}
+
+.margin-bottom-medium {
+  margin-bottom: 20px;
+}
+
+.margin-bottom-large {
+  margin-bottom: 30px;
+}
