--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,4 +1,23 @@
 
+<div class='grid-row'>
+  <div class='column-two-thirds'>
+    <h2 class='heading-medium'>
+      Headline statistics
+    </h2>
+  <p>
+    Black people are 6 times more likely to be stopped and searched by police.<br/>
+    <a href='##'>
+      Read more about ethnicity and the police
+    </a>
+  </p>
+  <p>
+    Young Bangladeshis and Pakistanis are twice as likely to be unemployed as white people of the same age.<br/>
+    <a href='##'>
+      Read more about ethnicity and employment
+    </a>
+  </p>
+</div>
+</div>
 
 <div class="grid-row" id="topic-section">
   <div class="column-two-thirds">
@@ -20,6 +39,7 @@
       </div>
     <% end %>
 </div>
+
 
 <div class='grid-row'>
   <div class='column-two-thirds'>
