--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -2,7 +2,7 @@
 <div class="breadcrumbs">
   <ol>
     <% @taxonomy_level.breadcrumbs.each do |crumb| %>
-    <li> <a href="<%=crumb.link%>"><%=crumb.breadcrumb_name%></a></li>
+      <li> <a href="<%=crumb.link%>"><%=crumb.breadcrumb_name%></a></li>
     <% end %>
   </ol>
 </div>
@@ -22,7 +22,7 @@
         <dt>Source:</dt>
         <dd>
           <a href="https://www.gov.uk/government/organisations/department-for-education">
-            Department of education
+            Department for Education
           </a>
         </dd>
         <dt>Last updated:</dt>
@@ -33,7 +33,7 @@
     </div>
 
     <p>
-      Attainment 8 measures a student’s average grade across 8 subjects to give a measure of success across GCSE subjects and equivalent qualifications. 
+      Attainment 8 measures a student’s average grade across 8 subjects to give a measure of success across GCSE subjects and equivalent qualifications.
     </p>
 
   </div>
@@ -424,49 +424,85 @@
     </h2>
 
     <h3 class='heading-small'>
-      Definition of Attainment 8
+      What ‘Attainment 8’ is
     </h3>
     <p>
       Attainment 8 measures the achievement of a pupil across 8 qualifications including mathematics (double weighted) and English (double weighted), 3 further qualifications that count in the English Baccalaureate (EBacc) measure and 3 further qualifications that can be GCSE qualifications (including EBacc subjects) or technical awards from the DfE approved list.
     </p>
 
     <h3 class='heading-small'>
-      Variables used
+      Ethnicity categories used in this analysis
     </h3>
-    <ul class='no-bullets loose-list'>
-      <li><a href='#'>Defintions of ethnicties</a></li>
-      <li><a href='#'>Defintions of locations</a></li>
+    <ul>
+      <li>White British</li>
+      <li>White Irish</li>
+      <li>Traveler of Irish Heritage</li>
+      <li>Gypsy/Roma</li>
+      <li>Other White</li>
+      <li>White and Black Caribbean</li>
+      <li>White and Black African</li>
+      <li>White and Asian</li>
+      <li>Other Mixed background</li>
+      <li>Indian</li>
+      <li>Pakistani</li>
+      <li>Bangladeshi</li>
+      <li>Other Asian Background</li>
+      <li>Black African</li>
+      <li>Black Carribbean</li>
+      <li>Other Black background</li>
+      <li>Chinese</li>
+      <li>Other Background</li>
+      <li>Unclassified</li>
     </ul>
 
     <h3 class='heading-small'>
-      Population breakdown
+      Population breakdown of students at the end of Key Stage 4
     </h3>
+    <p>
+      Key Stage 4 students are aged between 14 and 16.
+    </p>
     <table class=''>
-      <thead></thead>
+      <thead>
+        <td>
+          Ethnicity
+        </td>
+        <td>
+          Percentage of Key Stage 4 students
+        </td>
+        <td>
+          Number of people
+        </td>
+      </thead>
       <tbody>
         <tr>
           <td>White</td>
           <td>79.0%</td>
+          <td>423,000</td>
         </tr>
         <tr>
           <td>Asian</td>
           <td>9.6%</td>
+          <td>51,000</td>
         </tr>
         <tr>
           <td>Black</td>
           <td>5.2%</td>
+          <td>30,000</td>
         </tr>
         <tr>
           <td>Mixed</td>
           <td>4.3%</td>
+          <td>23,000</td>
         </tr>
         <tr>
           <td>Other ethnic group</td>
           <td>1.5%</td>
+          <td>8,000</td>
         </tr>
         <tr>
           <td>Chinese</td>
           <td>0.4%</td>
+          <td>2,000</td>
         </tr>
       </tbody>
     </table>
@@ -486,39 +522,6 @@
     </p>
 
   </div>
-</div>
-
-<div class='grid-row'>
-  <div class='column-full'>
-    <div class='supporting-information'>
-    </div>
-  </div>
-
-  <div class='column-two-thirds'>
-
-
-    <h2 class='heading-medium'>
-      Related information
-    </h2>
-
-    <h3 class='heading-small'>
-      Policy
-    </h3>
-    <ul class='no-bullets'>
-      <li><a href='¢#'>Policy 1</a></li>
-      <li><a href='¢∞'>Policy 2</a></li>
-    </ul>
-
-    <h3 class='heading-small'>
-      Publications
-    </h3>
-    <ul class='no-bullets'>
-      <li><a href='€#'>Name of report 1 by DfE</a></li>
-      <li><a href='¢∞'>Name of report 2 by DfE</a></li>
-      <li><a href='∞§'>Name of report 3 by DfE</a></li>
-    </ul>
-
-  </div> 
 </div>
 
 <div class='grid-row'>
@@ -585,7 +588,7 @@
       Estimation
     </h3>
     <p>
-      We round figures Percentages in this SFR are given to one decimal place.
+      We round figures percentages in this SFR are given to one decimal place.
     </p>
   </div> 
 </div>
@@ -605,7 +608,7 @@
         <dt>Source:</dt>
         <dd>
           <a href="https://www.gov.uk/government/organisations/department-for-education">
-            Department of education
+            Department for Education
           </a>
         </dd>
         <dt>First published:</dt>
@@ -639,13 +642,34 @@
 
   <div class='column-two-thirds'>
     <h2 class='heading-medium'>
-      Download data
+      Downloads
     </h2>
-    <ul class='no-bullets'>
-      <li><a href='##¢¢'>Download attainment 8 CSV</a> 10 kb</li>
-      <li><a href='##¢¢'>Download attainment 8 metadata PDF</a> 25 kb</li>
+    <h3 class='heading-small'>
+      Report
+    </h3>
+    <p class='margin-bottom-small'>
+      Reports contain meta data and files across multiple tabs.
+    </p>
+    <ul class='no-bullets loose-list'>
+      <li><a href='##¢¢'>Download attainment 8 report ODF</a> 10 kb</li>
+      <li><a href='##¢¢'>Download attainment 8 report XLM</a> 25 kb</li>
     </ul>
+    <h3 class='heading-small'>
+      Machine-readable data
+    </h3>
+    <p class='margin-bottom-small'>
+      Just the numbers.
+    </p>
+    <ul class='no-bullets loose-list margin-bottom-large'>
+      <li>
+        <a href='##¢¢'>Download attainment 8 data CVS</a> 10 kb
+      </li>
+    </ul>
+    <p>
+      <a href=''>Print this page</a>
+    </p>
   </div>
+</div>
 </div>
 
 
