--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -232,7 +232,7 @@
         Average Attainment 8 score was higher for girls than for boys across all ethnic groups. Girls were 4.6 points higher than boys at 52.3 for all ethnic groups.
       </li>
       <li>
-        Chinese girls had the highest attainment 8 score at 64.8. Gypsy and Roma boys had the lowest attainment 8 score at 19.1.
+        Chinese girls had the highest attainment 8 score at 64.8. Gypsy and Roma boys had the lowest attainment 8 score at 1.9.
       </li>
       <li>
         The smallest difference in attainment 8 scores between genders was in the Gypsy and Roma ethnic group where girls scored 2.5 points higher. The largest difference was for ‘any other Black background’ where girls scored 7.2 points higher.
@@ -311,7 +311,7 @@
           <td>5.05</td>
           <td>5.00</td>
           <td>4.97</td>
-          <td>5.00</td>
+          <td>5.01</td>
         </tr>
         <tr class=''>
           <td class=''>Black</td>
@@ -351,6 +351,7 @@
         </tr>
         <tr class=''>
           <td class=''>
+            <div class='expand-triangle' id='triangle-breakdown-of-asian-school-meal'></div>
             <span class='breakdown-controller' data-target='breakdown-of-asian-school-meal'>
               Asian
             </span>
@@ -379,18 +380,95 @@
           <td>5.00</td>
         </tr>
         <tr class=''>
-          <td class=' breakdown-controller'>Mixed</td>
+          <td class=''>
+            <div class='expand-triangle' id='triangle-breakdown-of-mixed-school-meal'></div>
+            <span class='breakdown-controller' data-target='breakdown-of-mixed-school-meal'>
+              Mixed
+            </span>
+          </td>
           <td>5.05</td>
           <td>5.00</td>
         </tr>
-        <tr class=''>
-          <td class=' breakdown-controller'>White</td>
-          <td>4.97</td>
+        <tr class='breakdown breakdown-of-mixed-school-meal js-hidden'>
+          <td>White and Black Caribbean</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-mixed-school-meal js-hidden'>
+          <td>White and Black African</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-mixed-school-meal js-hidden'>
+          <td>White and Asian</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-mixed-school-meal js-hidden'>
+          <td>Any other mixed background</td>
+          <td>5.00</td>
           <td>5.00</td>
         </tr>
         <tr class=''>
-          <td class=' breakdown-controller'>Black</td>
+          <td class=''>Any other ethnic group</td>
+          <td>5.01</td>
+          <td>5.01</td>
+        </tr>
+        <tr class=''>
+          <td class=''>
+            <div class='expand-triangle' id='triangle-breakdown-of-white-school-meal'></div>
+            <span class='breakdown-controller' data-target='breakdown-of-white-school-meal'>
+              White
+            </span>
+            </td>
+          <td>4.97</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-white-school-meal js-hidden'>
+          <td>White British</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-white-school-meal js-hidden'>
+          <td>Irish</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-white-school-meal js-hidden'>
+          <td>Traveller and Irish heritage</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-white-school-meal js-hidden'>
+          <td>Gypsy and Roma</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-white-school-meal js-hidden'>
+          <td>Any other White background</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        <tr class=''>
+          <td class=''>
+            <div class='expand-triangle' id='triangle-breakdown-of-black-school-meal'></div>
+            <span class='breakdown-controller' data-target='breakdown-of-black-school-meal'>Black</span>
+          </td>
           <td>4.87</td>
+          <td>4.87</td>
+        </tr>
+        <tr class='breakdown breakdown-of-black-school-meal js-hidden'>
+          <td>Black Caribbean</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-black-school-meal js-hidden'>
+          <td>Black African</td>
+          <td>5.00</td>
+          <td>5.00</td>
+        </tr>
+        <tr class='breakdown breakdown-of-black-school-meal js-hidden'>
+          <td>Any other Black background</td>
+          <td>5.00</td>
           <td>5.00</td>
         </tr>
       </tbody>
@@ -531,8 +609,6 @@
   </div>
 
   <div class='column-two-thirds'>
-
-
     <h2 class='heading-medium'>
       How the data is measured
     </h2>
