--- a/app/assets/stylesheets/typography-prototype.scss
+++ b/app/assets/stylesheets/typography-prototype.scss
@@ -42,6 +42,10 @@ ul {
   border-top: 1px solid $border-colour;
 }
 
+.margin-bottom-none {
+  margin-bottom: 0px;
+}
+
 .margin-bottom-small {
   margin-bottom: 5px;
 }
