--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -53,8 +53,8 @@
         </a>
       </li>
       <li>
-        <a href='##'>
-          Methodology for collecting and displaying data
+        <a href='https://drive.google.com/file/d/0B1HFujb1nO-rU2VsaTFBX2gzbmc/view?pli=1'>
+          Read the Summary of Statistical Principles for Government data on ethnicity
         </a>
       </li>
     </ul>
