--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -628,6 +628,10 @@
     <p>
       Results derived from a low number of responses are more likely to be affected by statistical variation, so observed changes might not reflect real differences. As such, caution is needed when interpreting short-term trends in the data especially for sub groups (for example, a particular ethnicity, age group and gender). Any values based on fewer than five responses have been completely suppressed. Values based on 5- 10 responses are shown, but marked by an asterisk (*). These should be used with particular caution.
     </p>
+    <a href='https://drive.google.com/file/d/0B1HFujb1nO-rU2VsaTFBX2gzbmc/view?pli=1'>
+      Summary of Statistical Principles
+    </a>
+
 
     <h3 class='heading-small'>
       Type of data
@@ -733,9 +737,6 @@
     <h3 class='heading-small'>
       Machine-readable data
     </h3>
-    <p class='margin-bottom-small'>
-      Just the numbers.
-    </p>
     <ul class='no-bullets loose-list margin-bottom-large'>
       <li>
         <a href='##¢¢'>Download attainment 8 data CVS</a> 10 kb
