changed stat on homepage

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -5,13 +5,13 @@
       Headline statistics
     </h2>
   <p>
-    Black people are 6 times more likely to be stopped and searched by police.<br/>
-    <a href='##'>
-      Read more about ethnicity and the police
+    White children under 16 are more likely to be regular smokers than children from other backgrounds.<br>
+    <a href='#∞'>
+      Read more about ethnicity and health
     </a>
   </p>
   <p>
-    Young Bangladeshis and Pakistanis are twice as likely to be unemployed as white people of the same age.<br/>
+    Young Bangladeshis and Pakistanis are twice as likely to be unemployed as white people of the same age.<br>
     <a href='##'>
       Read more about ethnicity and employment
     </a>
