--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -79,7 +79,13 @@
               Government data on ethnicity
             </h1>
              <p class='proposition'>
-              As part of how services provided by government operate, they collect data on ethnicity. This data has been brought together to show how public services treat people from different backgrounds.
+              Government departments collect data and run surveys which include information on ethnicity. This is the first time that this data has been collected together and shown openly in one place.
+             </p>
+             <p>
+              Now government departments and other organisations can see where there are differences and where there is a need for change in order to have a fairer Britain.
+             </p>
+             <p>
+              Members of the public will be able to see how experiences and outcomes differ for people of various ethnicities across public sector services, which cover important areas of their life such as health, work and education.
              </p>
             </div>
           </div>
