change what the data measures to Measure explanation

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -498,7 +498,7 @@
   <div class='column-two-thirds'>
 
     <h2 class='heading-medium'>
-      What the data measures
+      Measure explanation
     </h2>
 
     <h3 class='heading-small'>
