--- a/app/views/taxonomy_level/smoking.html.erb
+++ b/app/views/taxonomy_level/smoking.html.erb
@@ -1253,7 +1253,7 @@
   <div class='column-two-thirds'>
 
     <h2 class='heading-medium'>
-      What the data measures
+      Measure explanation
     </h2>
 
     <p>
