changed file types

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -731,15 +731,15 @@
       Reports contain meta data and files across multiple tabs.
     </p>
     <ul class='no-bullets loose-list'>
-      <li><a href='##¢¢'>Download attainment 8 report ODF</a> 10 kb</li>
-      <li><a href='##¢¢'>Download attainment 8 report XLM</a> 25 kb</li>
+      <li><a href='##¢¢'>Download attainment 8 report - Open data format (ODS)</a> 10 kb</li>
+      <li><a href='##¢¢'>Download attainment 8 report - Microsoft Excel (XLS)</a> 25 kb</li>
     </ul>
     <h3 class='heading-small'>
       Machine-readable data
     </h3>
     <ul class='no-bullets loose-list margin-bottom-large'>
       <li>
-        <a href='##¢¢'>Download attainment 8 data CVS</a> 10 kb
+        <a href='##¢¢'>Download attainment 8 data CSV</a> 10 kb
       </li>
     </ul>
     <p>
