--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -1872,15 +1872,15 @@
     Reports contain meta data and files across multiple tabs.
   </p>
   <ul class='no-bullets loose-list'>
-    <li><a href='##¢¢'>Download unemployment report ODF</a> 10 kb</li>
-    <li><a href='##¢¢'>Download unemployment report XLM</a> 25 kb</li>
+    <li><a href='##¢¢'>Download unemployment report - Open data format (ODF)</a> 10 kb</li>
+    <li><a href='##¢¢'>Download unemployment report - Microsoft Excel (XLS)</a> 25 kb</li>
   </ul>
   <h3 class='heading-small'>
     Machine-readable data
   </h3>
   <ul class='no-bullets loose-list margin-bottom-large'>
     <li>
-      <a href='##¢¢'>Download unemployment data CVS</a> 10 kb
+      <a href='##¢¢'>Download unemployment data CSV</a> 10 kb
     </li>
   </ul>
   <p>
