--- a/app/views/taxonomy_level/smoking.html.erb
+++ b/app/views/taxonomy_level/smoking.html.erb
@@ -1374,15 +1374,15 @@
       Reports contain meta data and files across multiple tabs.
     </p>
     <ul class='no-bullets loose-list'>
-      <li><a href='##¢¢'>Download Smoking prevalence at age 15 report ODF</a> 10 kb</li>
-      <li><a href='##¢¢'>Download Smoking prevalence at age 15 report XLM</a> 25 kb</li>
+      <li><a href='##¢¢'>Download Smoking prevalence at age 15 report – Open data format (ODF)</a> 10 kb</li>
+      <li><a href='##¢¢'>Download Smoking prevalence at age 15 report – Microsoft Excel (XLS)</a> 25 kb</li>
     </ul>
     <h3 class='heading-small'>
       Machine-readable data
     </h3>
     <ul class='no-bullets loose-list margin-bottom-large'>
       <li>
-        <a href='##¢¢'>Download Smoking prevalence at age 15 data CVS</a> 10 kb
+        <a href='##¢¢'>Download Smoking prevalence at age 15 data CSV</a> 10 kb
       </li>
     </ul>
     <p>
