--- a/app/views/taxonomy_level/smoking.html.erb
+++ b/app/views/taxonomy_level/smoking.html.erb
@@ -40,7 +40,7 @@
 
   <div class='column-two-thirds'>
     <h2 class='table-name heading-medium'>
-      15 year olds who usually smoke more than six cigarettes per week by race
+      15 year olds who usually smoke more than six cigarettes per week by ethnicity
     </h2>
   </div>
   <div class='column-full'>
@@ -442,7 +442,7 @@
 
   <div class='column-two-thirds'>
     <h2 class='table-name heading-medium'>
-      15 year olds who usually smoke between one and six cigarettes per week by race
+      15 year olds who usually smoke between one and six cigarettes per week by ethnicity
     </h2>
   </div>
   <div class='column-full'>
@@ -846,7 +846,7 @@
 
   <div class='column-two-thirds'>
     <h2 class='table-name heading-medium'>
-      15 year olds who usually smoke between one and six cigarettes per week by race
+      15 year olds who usually smoke between one and six cigarettes per week by ethnicity
     </h2>
   </div>
   <div class='column-full'>
