--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -564,8 +564,8 @@
     <thead class=''>
       <tr>
         <td class='visually-hidden'>Ethnicity</td>
-        <td class=''>Number of people</td>
-        <td class=''>Percent</td>
+        <td class=''>Number of people unemployed</td>
+        <td class=''>Percent of ethnicity  unemployed</td>
       </tr>
     </thead>
     <tbody>
@@ -1556,10 +1556,10 @@
       </tr>
       <tr class='border-bottom'>
         <td class='right-border'></td>
-        <td class='not-bold '>Number of people</td>
-        <td class='not-bold right-border'>Percent</td>
-        <td class='not-bold '>Number of people</td>
-        <td class='not-bold '>Percent</td>
+        <td class='not-bold '>Number of female unemployed</td>
+        <td class='not-bold right-border'>Percent of females unemployed</td>
+        <td class='not-bold '>Number of males unemployed</td>
+        <td class='not-bold '>Percent of males unemployed</td>
       </tr>
     </thead>
     <tbody>
@@ -1600,7 +1600,7 @@
       </tr>
       <tr class=''>
         <td class='right-border'>Chinese</td>
-        <td colspan='2'class='right-border'style='text-align:center;' >Sample size too small</td>
+        <td colspan='2'class='right-border'style='text-align:center;'>Sample size too small</td>
         <td colspan='2' style='text-align:center;'>Sample size too small</td>
       </tr>
       <tr class=''>
