type of data for smoking

--- a/app/views/taxonomy_level/smoking.html.erb
+++ b/app/views/taxonomy_level/smoking.html.erb
@@ -1313,6 +1313,13 @@
       Summary of Statistical Principles
     </a>
 
+    <h3 class='heading-small'>
+      Type of data
+    </h3>
+    <p>
+      Survey
+    </p>
+
   </div> 
 </div>
 
