--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -2,18 +2,18 @@
 <div class='grid-row'>
   <div class='column-two-thirds'>
     <h2 class='heading-medium'>
-      Headline statistics
+      Examples of differences 
     </h2>
-  <p>
-    White children under 16 are more likely to be regular smokers than children from other backgrounds.<br>
-    <a href='#∞'>
-      Read more about ethnicity and health
-    </a>
-  </p>
   <p>
     Young Bangladeshis and Pakistanis are twice as likely to be unemployed as white people of the same age.<br>
     <a href='##'>
       Read more about ethnicity and employment
+    </a>
+  </p>
+  <p>
+    White children under 16 are more likely to be regular smokers than children from other backgrounds.<br>
+    <a href='#∞'>
+      Read more about ethnicity and health
     </a>
   </p>
 </div>
