corrected table title to economically active

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -564,8 +564,8 @@
     <thead class=''>
       <tr>
         <td class='visually-hidden'>Ethnicity</td>
-        <td class=''>Number of people unemployed</td>
-        <td class=''>Percent of ethnicity  unemployed</td>
+        <td class=''>Number of people economically active</td>
+        <td class=''>Percent of ethnicity unemployed</td>
       </tr>
     </thead>
     <tbody>
@@ -1556,10 +1556,10 @@
       </tr>
       <tr class='border-bottom'>
         <td class='right-border'></td>
-        <td class='not-bold '>Number of female unemployed</td>
+        <td class='not-bold '>Number of females economically active</td>
         <td class='not-bold right-border'>Percent of females unemployed</td>
         <td class='not-bold '>Number of males unemployed</td>
-        <td class='not-bold '>Percent of males unemployed</td>
+        <td class='not-bold '>Percent of males economically active</td>
       </tr>
     </thead>
     <tbody>
