--- a/app/views/taxonomy_level/smoking.html.erb
+++ b/app/views/taxonomy_level/smoking.html.erb
@@ -846,7 +846,7 @@
 
   <div class='column-two-thirds'>
     <h2 class='table-name heading-medium'>
-      15 year olds who usually smoke between 1 and 6 cigarettes per week by ethnicity
+      15 year olds who sometimes smoke cigarettes but less than 1 a week by ethnicity
     </h2>
   </div>
   <div class='column-full'>
