fixed titles on chart

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -1558,8 +1558,8 @@
         <td class='right-border'></td>
         <td class='not-bold '>Number of females economically active</td>
         <td class='not-bold right-border'>Percent of females unemployed</td>
-        <td class='not-bold '>Number of males unemployed</td>
-        <td class='not-bold '>Percent of males economically active</td>
+        <td class='not-bold '>Number of males economically active</td>
+        <td class='not-bold '>Percent of males unemployed</td>
       </tr>
     </thead>
     <tbody>
