--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -6,13 +6,13 @@
     </h2>
   <p>
     Young Bangladeshis and Pakistanis are twice as likely to be unemployed as white people of the same age.<br>
-    <a href='##'>
+    <a href='/unemployment%20in%20the%20uk'>
       Read more about ethnicity and employment
     </a>
   </p>
   <p>
     White children under 16 are more likely to be regular smokers than children from other backgrounds.<br>
-    <a href='#∞'>
+    <a href='/young%20smokers%20under%2016%20years%20old'>
       Read more about ethnicity and health
     </a>
   </p>
