--- a/app/assets/stylesheets/typography-prototype.scss
+++ b/app/assets/stylesheets/typography-prototype.scss
@@ -1,9 +1,12 @@
 @import 'colours';
 @import 'typography';
 
+.font-size-small {
+  @include core-16;
+}
+
 .metadata {
   @include core-16;
-  padding-top: 20px;
   padding-bottom: 20px;
   dt {
     float: left;
