--- a/app/views/tables/_unemployment_rate_by_ethnicity.html.erb
+++ b/app/views/tables/_unemployment_rate_by_ethnicity.html.erb
@@ -3,48 +3,57 @@
     <tr>
       <td class='visually-hidden'>Ethnicity</td>
       <td class=''>Number of people economically active</td>
-      <td class=''>Percent of ethnicity unemployed</td>
+      <td class=''>Number of people unempoloyed</td>
+      <td class=''>Unemployed rate</td>
     </tr>
   </thead>
   <tbody>
     <tr class=''>
       <td class=''>White</td>
       <td>28,256,000</td>
+      <td>1,356,288</td>
       <td>4.8%</td>
     </tr>
     <tr class=''>
       <td class=''>Black</td>
       <td>967,000</td>
+      <td>135,380</td>
       <td>14.0%</td>
     </tr>
     <tr class=''>
       <td class=''>Mixed or multiple</td>
       <td>343,000</td>
+      <td>38,416</td>
       <td>11.2%</td>
     </tr>
     <tr class=''>
       <td class=''>Indian</td>
       <td>857,000</td>
+      <td>54,848</td>
       <td>6.4%</td>
     </tr>
     <tr class=''>
       <td class=''>Pakistani</td>
       <td>660,000</td>
+      <td>75,900</td>
       <td>11.5%</td>
     </tr>
     <tr class=''>
       <td class=''>Chinese</td>
       <td>145,000</td>
+      <td>7,105</td>
       <td>4.9%</td>
     </tr>
     <tr class=''>
       <td class=''>Other Asian</td>
       <td>369,000</td>
+      <td>24,354</td>
       <td>6.6%</td>
     </tr>
     <tr class=''>
       <td class=''>Other</td>
       <td>464,000</td>
+      <td>41,760</td>
       <td>9.0%</td>
     </tr>        
   </tbody>
