--- a/app/views/taxonomy_level/unemployement.html.erb
+++ b/app/views/taxonomy_level/unemployement.html.erb
@@ -16,7 +16,7 @@
       Unemployment rates
     </h1>
 
-    <div class="metadata">
+    <div class="metadata" style="display: none">
       <dl>
         <dt>Source:</dt>
         <dd>
@@ -92,11 +92,9 @@
         </p>
       </div>
     </details>
-
-    
   </div>
 
-  <div class="column-two-thirds">
+  <div class="column-two-thirds" style="display: none">
     <h2 class='heading-medium'>
       Main points
     </h2>
@@ -121,18 +119,24 @@
     <h2 class='heading-medium'>
       Things you need to know
     </h2>
-    <p>
-      These unemployment figures are estimates based on a national survey and therefore are subject to sampling error and in some cases may not reflect the actual population.
-    </p>
-    <p>
-      Smaller numbers of survey respondents from ethnic minority backgrounds mean that unemployment estimates for ethnic minorities are more unreliable than estimates for White people.
-    </p>
-    <p>
-      Results derived from a low number of responses are more likely to be affected by statistical variation, so observed changes might not reflect real differences. As such, caution is needed when interpreting short-term trends in the data especially for sub groups (for example, a particular ethnic group, age group and gender). Any values based on fewer than five responses have been completely suppressed. Values based on 5-10 responses are shown, but marked by an asterisk (*). These should be used with particular caution.
-    </p>
-    <p>
-      Estimates for unemployement rates by ethnicity by age by gender are given as annual estimates rather than quarterly estimates as sample sizes are not large enough to give reliable quarterly estimates.
-    </p>
+    <details class="normalize">
+      <summary><span class="summary">More information</span></summary>
+      <div class="panel panel-border-narrow">
+        <p>
+          These unemployment figures are estimates based on a national survey and therefore are subject to sampling error and in some cases may not reflect the actual population.
+        </p>
+        <p>
+          Smaller numbers of survey respondents from ethnic minority backgrounds mean that unemployment estimates for ethnic minorities are more unreliable than estimates for White people.
+        </p>
+        <p>
+          Results derived from a low number of responses are more likely to be affected by statistical variation, so observed changes might not reflect real differences. As such, caution is needed when interpreting short-term trends in the data especially for sub groups (for example, a particular ethnic group, age group and gender). Any values based on fewer than five responses have been completely suppressed. Values based on 5-10 responses are shown, but marked by an asterisk (*). These should be used with particular caution.
+        </p>
+        <p>
+          Estimates for unemployement rates by ethnicity by age by gender are given as annual estimates rather than quarterly estimates as sample sizes are not large enough to give reliable quarterly estimates.
+        </p>
+      </div>
+    </details>
+    
   </div>
 
   <div class="column-two-thirds">
@@ -151,6 +155,14 @@
           <a href="#">
             2011 Census and the Labour Force Survey (LFS)
           </a>
+        </dd>
+        <dt>Department:</dt>
+        <dd>
+          Department for Work and Pensions
+        </dd>
+        <dt>Location:</dt>
+        <dd>
+          England only
         </dd>
         <dt>Time period:</dt>
         <dd>
@@ -173,23 +185,11 @@
 </div>
 
 <div class='grid-row'>
-  <div class='column-two-thirds'>
-
-    <h3 class='heading-small'>
-      Summary
-    </h3>
-    <p>
-      Unemployment has decreased over the past three years for most groups, with the exception of Indian and other Asian people, who have seen a small increase in unemployment. Younger people across all backgrounds have a significantly higher rate of unemployment.
-    </p>
-    <p>
-      In 2015, ethnic minorities have higher rates of unemployment, with people from a black background having the highest unemployment rate at 14%.
-    </p>
-
-  </div>
-
+  <div class="column-two-thirds">
     <h3 class='heading-small'>
       Download data
     </h3>
+
     <ul class='no-bullets font-size-small'>
       <li>
         <a href='##'>
@@ -212,6 +212,17 @@
         </a>
       </li>
     </ul>
+  </div>
+  <div class='column-two-thirds'>
+    <h3 class='heading-small'>
+      Summary
+    </h3>
+    <p>
+      Unemployment has decreased over the past three years for most groups, with the exception of Indian and other Asian people, who have seen a small increase in unemployment. Younger people across all backgrounds have a significantly higher rate of unemployment.
+    </p>
+    <p>
+      In 2015, ethnic minorities have higher rates of unemployment, with people from a black background having the highest unemployment rate at 14%.
+    </p>
   </div>
 </div>
 
@@ -232,6 +243,14 @@
             2011 Census and the Labour Force Survey (LFS)
           </a>
         </dd>
+        <dt>Department:</dt>
+        <dd>
+          Department for Work and Pensions
+        </dd>
+        <dt>Location:</dt>
+        <dd>
+          England only
+        </dd>
         <dt>Time period:</dt>
         <dd>
           2014 to 2015 inclusive
@@ -251,23 +270,6 @@
   </details>
 
   <div class='column-two-thirds'>
-
-    <h3 class='heading-small'>
-      Summary
-    </h3>
-    <p>
-      The overall unemployment rate for males in the UK is slightly higher than that for females.
-    </p>
-
-    <p>
-      In the year to June 2016, the male unemployment rate was 5.2% compared to a female unemployment rate of 5.0%. However, this hides some differences across ethnic groups. Among people from a white, Black and other ethnic background, the unemployment rate was similar or slighter higher for men than for women.
-    </p>
-    <p>
-      Women from a Bangladeshi and Pakistani background had the highest unemployment rate of 16%, which was double that of Bangladeshi and Pakistani men.
-    </p>
-  </div>
-
-  <div class='column-one-third'>
     <h3 class='heading-small'>
       Download data
     </h3>
@@ -294,6 +296,33 @@
       </li>
     </ul>
   </div>
+
+  <div class='column-two-thirds'>
+
+    <h3 class='heading-small'>
+      Summary
+    </h3>
+    <p>
+      The overall unemployment rate for males in the UK is slightly higher than that for females.
+    </p>
+
+    <p>
+      In the year to June 2016, the male unemployment rate was 5.2% compared to a female unemployment rate of 5.0%. However, this hides some differences across ethnic groups. Among people from a white, Black and other ethnic background, the unemployment rate was similar or slighter higher for men than for women.
+    </p>
+    <p>
+      Women from a Bangladeshi and Pakistani background had the highest unemployment rate of 16%, which was double that of Bangladeshi and Pakistani men.
+    </p>
+  </div>
+
+  <div class="column-two-thirds">
+    <h3 class="heading-small">
+      Definition
+    </h3>
+    <p>
+      Male / Female
+    </p>
+  </div>
+
 </div>
 
 
@@ -316,6 +345,14 @@
           <a href="#">
             2011 Census and the Labour Force Survey (LFS)
           </a>
+        </dd>
+        <dt>Department:</dt>
+        <dd>
+          Department for Work and Pensions
+        </dd>
+        <dt>Location:</dt>
+        <dd>
+          England only
         </dd>
         <dt>Time period:</dt>
         <dd>
@@ -346,6 +383,14 @@
             2011 Census and the Labour Force Survey (LFS)
           </a>
         </dd>
+        <dt>Department:</dt>
+        <dd>
+          Department for Work and Pensions
+        </dd>
+        <dt>Location:</dt>
+        <dd>
+          England only
+        </dd>
         <dt>Time period:</dt>
         <dd>
           2014 to 2015 inclusive
@@ -373,6 +418,14 @@
             2011 Census and the Labour Force Survey (LFS)
           </a>
         </dd>
+        <dt>Department:</dt>
+        <dd>
+          Department for Work and Pensions
+        </dd>
+        <dt>Location:</dt>
+        <dd>
+          England only
+        </dd>
         <dt>Time period:</dt>
         <dd>
           2014 to 2015 inclusive
@@ -397,28 +450,6 @@
 
 <div class="grid-row">
   <div class='column-two-thirds'>
-
-    <h3 class='heading-small'>
-      Summary
-    </h3>
-    <p>
-      The 16-24 age group have the highest unemployment rate. In 2015, the unemployment rate for 16-24 year olds was 14.7% around 661,000 people.
-    </p>
-
-    <p>
-      Overall Black 16-24 year olds had the highest unemployment rate at 30%, around 40,000 people in 2015. The second highest unemployment rate was for Pakistani/Bangladeshi 16-24 year olds at 27.1%, around 33,000 people. This is twice the unemployment rate for White 16-24 year olds.
-    </p>
-
-    <p>
-      In the 25-49 age group, the highest unemployment rate was also for Black people at 12.1%, around 74,000 people.
-    </p>
-
-    <p>
-      The lowest unemployment rates was for White people aged 50+ at 3.2%, around 246,000 people.
-    </p>
-  </div>
-
-  <div class='column-one-third'>
     <h3 class='heading-small'>
       Download data
     </h3>
@@ -445,6 +476,38 @@
       </li>
     </ul>
   </div>
+
+  <div class='column-two-thirds'>
+
+    <h3 class='heading-small'>
+      Summary
+    </h3>
+    <p>
+      The 16-24 age group have the highest unemployment rate. In 2015, the unemployment rate for 16-24 year olds was 14.7% around 661,000 people.
+    </p>
+
+    <p>
+      Overall Black 16-24 year olds had the highest unemployment rate at 30%, around 40,000 people in 2015. The second highest unemployment rate was for Pakistani/Bangladeshi 16-24 year olds at 27.1%, around 33,000 people. This is twice the unemployment rate for White 16-24 year olds.
+    </p>
+
+    <p>
+      In the 25-49 age group, the highest unemployment rate was also for Black people at 12.1%, around 74,000 people.
+    </p>
+
+    <p>
+      The lowest unemployment rates was for White people aged 50+ at 3.2%, around 246,000 people.
+    </p>
+  </div>
+
+  <div class="column-two-thirds">
+    <h3 class="heading-small">
+      Definition
+    </h3>
+    <p>
+      Age groups are 16-24, 25-49, 50+ to cover everyone of a working age.
+    </p>
+  </div>
+
 </div>
 <!-- end of section -->
 
@@ -453,7 +516,7 @@
 <div class="grid-row">
   <div class='column-two-thirds'>
     <h2 class='table-name heading-medium'>
-      Unemployment over time
+      Unemployment by ethnicity (2002-2015)
     </h2>
   </div>
 
@@ -467,9 +530,17 @@
             2011 Census and the Labour Force Survey (LFS)
           </a>
         </dd>
+        <dt>Department:</dt>
+        <dd>
+          Department for Work and Pensions
+        </dd>
+        <dt>Location:</dt>
+        <dd>
+          England only
+        </dd>
         <dt>Time period:</dt>
         <dd>
-          2014 to 2015 inclusive
+          2002 to 2015 inclusive
         </dd>
       </dl>
     </div>
@@ -532,27 +603,6 @@
   </details>
 
   <div class='column-two-thirds'>
-
-    <h3 class='heading-small'>
-      Summary
-    </h3>
-    <p>
-      Between October and December 2016, Bangladeshi people aged 16+ had the highest unemployment rate (14.3%) - around 30,000 people.
-    </p>
-
-    <p>
-      The rate of unemploymemnt for Bangladeshi people was over 3 times higher than the average for all ethnic groups.
-    </p>
-
-    <p>
-      In the 25-49 age group, the highest unemployment rate was also for Black people at 12.1%, around 74,000 people.
-    </p>
-
-    <p>
-      The lowest unemployment rates was for White people aged 50+ at 3.2%, around 246,000 people.
-    </p>
-  </div>
-  <div class='column-one-third'>
     <h3 class='heading-small'>
       Download data
     </h3>
@@ -580,15 +630,95 @@
     </ul>
   </div>
 
+  <div class='column-two-thirds'>
+    <h3 class='heading-small'>
+      Summary
+    </h3>
+    <p>
+      Between October and December 2016, Bangladeshi people aged 16+ had the highest unemployment rate (14.3%) - around 30,000 people.
+    </p>
+
+    <p>
+      The rate of unemploymemnt for Bangladeshi people was over 3 times higher than the average for all ethnic groups.
+    </p>
+
+    <p>
+      In the 25-49 age group, the highest unemployment rate was also for Black people at 12.1%, around 74,000 people.
+    </p>
+
+    <p>
+      The lowest unemployment rates was for White people aged 50+ at 3.2%, around 246,000 people.
+    </p>
+    <div class="supporting-information" style="clear: both">
+    </div>
+  </div>
+
 </div>
 
 <!-- end of block -->
 
+<div class="grid-row">
+  <div class="column-two-thirds">
+
+    <h2 class='heading-medium'>
+      Main points
+    </h2>
+    <p>
+      Between October and December 2016, Bangladeshi people aged 16+ had the highest unemployment rate (14.3%) - around 30,000 people.
+    </p>
+    <p>
+      The rate of unemploymemnt for Bangladeshi people was over 3 times higher than the average for all ethnic groups.
+    </p>
+    <p>
+      Chinese people had the lowest unemployment rate. Between October and December 2016, around 6,000 Chinese people (3.5%), aged 16+, were unemployed. 
+    </p>
+    <p>
+      The rate of unemployment for Chinese people was 2.3 times lower than the average for all ethnic minority groups.
+    </p>
+    <p>
+      Around 1.2 million (4.1%) of White people aged 16+ were unemployed. The rate of unemploymemnt for White people is nearly 2 times lower than rate for all ethnic minority groups.
+    </p>
+  </div>
+</div>
 
 <div class="grid-row">
   <div class="column-two-thirds">
 
     <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2>
+            <button>
+              Downloads
+            </button>
+          </h2>
+          <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body" style="display: none;">
+          <h3 class='heading-small'>
+            Report
+          </h3>
+          <p class='margin-bottom-small'>
+            Reports contain meta data and files across multiple tabs.
+          </p>
+          <ul class='no-bullets loose-list'>
+            <li><a href='##¢¢'>Download unemployment report - Open data format (ODF)</a> 10 kb</li>
+            <li><a href='##¢¢'>Download unemployment report - Microsoft Excel (XLS)</a> 25 kb</li>
+          </ul>
+          <h3 class='heading-small'>
+            Machine-readable data
+          </h3>
+          <ul class='no-bullets loose-list margin-bottom-large'>
+            <li>
+              <a href='##¢¢'>Download unemployment data CSV</a> 10 kb
+            </li>
+          </ul>
+          <p>
+            <a href=''>Print this page</a>
+          </p>
+        </div>
+      </div>
       <div class="accordion">
         <div class="accordion__header">
           <h2>
@@ -749,40 +879,6 @@
             Administrative
           </p>
 
-        </div>
-      </div>
-      <div class="accordion">
-        <div class="accordion__header">
-          <h2>
-            <button>
-              Downloads
-            </button>
-          </h2>
-          <span class="plus-minus-icon"></span>
-        </div>
-
-        <div class="accordion__body" style="display: none;">
-          <h3 class='heading-small'>
-            Report
-          </h3>
-          <p class='margin-bottom-small'>
-            Reports contain meta data and files across multiple tabs.
-          </p>
-          <ul class='no-bullets loose-list'>
-            <li><a href='##¢¢'>Download unemployment report - Open data format (ODF)</a> 10 kb</li>
-            <li><a href='##¢¢'>Download unemployment report - Microsoft Excel (XLS)</a> 25 kb</li>
-          </ul>
-          <h3 class='heading-small'>
-            Machine-readable data
-          </h3>
-          <ul class='no-bullets loose-list margin-bottom-large'>
-            <li>
-              <a href='##¢¢'>Download unemployment data CSV</a> 10 kb
-            </li>
-          </ul>
-          <p>
-            <a href=''>Print this page</a>
-          </p>
         </div>
       </div>
     </div>
