changes to svgs

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -325,6 +325,9 @@
     </div>
 
     <img src="/assets/graphs/unemployment-age-16-24.svg">
+    <div class="graph-label" style="position: relative">
+      <span style="position: absolute; top: -35px; left: 150px; font-size: 16px;">unemployment rate</span>  
+    </div>
   </div>
 
 
@@ -354,6 +357,9 @@
     </div>
 
     <img src="/assets/graphs/unemployment-age-24-49.svg">
+    <div class="graph-label" style="position: relative">
+      <span style="position: absolute; top: -35px; left: 150px; font-size: 16px;">unemployment rate</span>  
+    </div>
   </div>
 
   <!-- end of block -->
@@ -381,7 +387,9 @@
     </div>
 
     <img src="/assets/graphs/unemployment-age-49plus.svg">
-
+    <div class="graph-label" style="position: relative">
+      <span style="position: absolute; top: -35px; left: 150px; font-size: 16px;">unemployment rate</span>  
+    </div>
   </div>
 
   <details class="normalize">
@@ -453,7 +461,7 @@
 <div class="grid-row">
   <div class='column-two-thirds'>
     <h2 class='table-name heading-medium'>
-      Unemployment over time
+      Unemployment rate by ethnicity (2002-2015)
     </h2>
   </div>
 
