--- a/app/views/graphs/_unemployment_rate_by_ethnicity.html.erb
+++ b/app/views/graphs/_unemployment_rate_by_ethnicity.html.erb
@@ -229,50 +229,6 @@ x="0px" y="0px" width="960px" height="589px" viewBox="0 0 960 589" xml:space="pr
   <path d="M134.9,506.2h-0.2c-1.3,0-2.6,0.5-2.6,2.7v4.1h-1.3v-8h1.3v1.3c0.4-0.9,1.4-1.4,2.4-1.4h0.4V506.2z"/>
 </g>
 <g>
-  <path d="M162.6,562v0.9c0.5-0.7,1.3-1.1,2.3-1.1c2.1,0,3.4,1.7,3.4,4.2s-1.3,4.1-3.4,4.1c-1,0-1.9-0.4-2.3-1.1v3.3h-1.3V562H162.6z
-  M167,566c0-1.7-0.8-2.9-2.3-2.9c-1.4,0-2.1,1-2.1,2.3v1.3c0,1.3,0.7,2.3,2.1,2.3C166.2,569,167,567.7,167,566L167,566z"/>
-  <path d="M171.3,566.4c0.1,1.5,1,2.6,2.5,2.6c0.9,0,1.5-0.3,2.1-0.8l0.7,0.9c-0.7,0.6-1.7,1-2.8,1c-2.3,0-3.8-1.7-3.8-4.1
-  c0-2.4,1.4-4.2,3.6-4.2c2.1,0,3.4,1.7,3.4,4.1v0.4H171.3z M171.3,565.4h4.2c0-1.2-0.7-2.4-2-2.4C172.2,563,171.4,564.1,171.3,565.4
-  z"/>
-  <path d="M183,563.2h-0.2c-1.3,0-2.6,0.5-2.6,2.7v4.1H179v-8h1.3v1.3c0.4-0.9,1.4-1.4,2.4-1.4h0.4V563.2z"/>
-  <path d="M185.4,566c0,1.6,0.8,3,2.3,3c1,0,1.7-0.6,2.1-1.3l1.1,0.6c-0.5,1.1-1.7,1.9-3.2,1.9c-2.2,0-3.7-1.7-3.7-4.1
-  c0-2.4,1.5-4.2,3.7-4.2c1.4,0,2.6,0.7,3.2,1.9l-1.1,0.6c-0.4-0.8-1.1-1.3-2.1-1.3C186.2,563,185.4,564.4,185.4,566L185.4,566z"/>
-  <path d="M193.7,566.4c0.1,1.5,1,2.6,2.5,2.6c0.9,0,1.5-0.3,2.1-0.8l0.7,0.9c-0.7,0.6-1.7,1-2.8,1c-2.3,0-3.8-1.7-3.8-4.1
-  c0-2.4,1.4-4.2,3.6-4.2c2.1,0,3.4,1.7,3.4,4.1v0.4H193.7z M193.7,565.4h4.2c0-1.2-0.7-2.4-2-2.4C194.6,563,193.8,564.1,193.7,565.4
-  z"/>
-  <path d="M201.3,562h1.3v0.9c0.5-0.7,1.4-1.1,2.3-1.1c1.8,0,2.7,1.3,2.7,2.7v5.4h-1.3v-5c0-1.4-0.7-1.9-1.6-1.9c-1,0-2,0.7-2,2.2
-  v4.7h-1.3V562z"/>
-  <path d="M212.2,568c0,0.5,0.1,1,1,1c0.2,0,0.8,0,1-0.1l0.1,1.2c0,0-0.8,0.1-1.4,0.1c-1.3,0-2-0.5-2-1.9v-5.1h-1.5V562h1.5v-2.6
-  l1.3-0.5v3.1h2.2v1.2h-2.2V568z"/>
-  <path d="M227.3,566c0,2.4-1.5,4.1-3.7,4.1s-3.7-1.7-3.7-4.1c0-2.4,1.5-4.2,3.7-4.2S227.3,563.6,227.3,566z M225.9,566.1
-  L225.9,566.1c0-1.7-0.8-3.1-2.3-3.1s-2.3,1.4-2.3,3v0.1c0,1.6,0.8,2.9,2.3,2.9S225.9,567.6,225.9,566.1z"/>
-  <path d="M231.2,562h1.6v1.2h-1.6v6.8h-1.3v-6.8h-1.3V562h1.3v-1.5c0-1.4,0.9-1.9,2.2-1.9c0.6,0,1.1,0.1,1.3,0.1l-0.1,1.1
-  c-0.3,0-0.9-0.1-1.1-0.1c-0.8,0-0.9,0.5-0.9,1V562z"/>
-  <path d="M244.7,570h-1.3v-0.9c-0.5,0.7-1.4,1.1-2.3,1.1c-1.8,0-2.7-1.3-2.7-2.7V562h1.3v5c0,1.4,0.7,1.9,1.6,1.9c1.1,0,2-0.7,2-2.2
-  V562h1.3V570z"/>
-  <path d="M247.2,562h1.3v0.9c0.5-0.7,1.4-1.1,2.3-1.1c1.8,0,2.7,1.3,2.7,2.7v5.4h-1.3v-5c0-1.4-0.7-1.9-1.6-1.9c-1,0-2,0.7-2,2.2
-  v4.7h-1.3V562z"/>
-  <path d="M256.9,566.4c0.1,1.5,1,2.6,2.5,2.6c0.9,0,1.5-0.3,2.1-0.8l0.7,0.9c-0.7,0.6-1.7,1-2.8,1c-2.3,0-3.8-1.7-3.8-4.1
-  c0-2.4,1.4-4.2,3.6-4.2c2.1,0,3.4,1.7,3.4,4.1v0.4H256.9z M257,565.4h4.2c0-1.2-0.7-2.4-2-2.4C257.9,563,257,564.1,257,565.4z"/>
-  <path d="M270.6,570h-1.3v-5c0-1.4-0.7-1.9-1.6-1.9c-0.9,0-1.8,0.7-1.8,2.2v4.7h-1.3v-8h1.3v0.9c0.5-0.7,1.2-1.1,2.1-1.1
-  c0.7,0,1.7,0.4,2.2,1.3c0.6-1,1.5-1.3,2.4-1.3c1.7,0,2.7,1.3,2.7,2.7v5.5H274v-5c0-1.4-0.8-1.9-1.6-1.9c-0.9,0-1.8,0.7-1.8,2.2V570
-  z"/>
-  <path d="M279.1,562v0.9c0.5-0.7,1.3-1.1,2.3-1.1c2.1,0,3.4,1.7,3.4,4.2s-1.3,4.1-3.4,4.1c-1,0-1.9-0.4-2.3-1.1v3.3h-1.3V562H279.1z
-  M283.5,566c0-1.7-0.8-2.9-2.3-2.9c-1.4,0-2.1,1-2.1,2.3v1.3c0,1.3,0.7,2.3,2.1,2.3C282.7,569,283.5,567.7,283.5,566L283.5,566z"/>
-  <path d="M286.9,558.8h1.3v9.4c0,0.5,0.2,0.8,0.8,0.8c0.3,0,0.6,0,0.8,0l0.1,1.1c0,0-0.8,0.1-1.3,0.1c-0.9,0-1.7-0.4-1.7-1.6V558.8z
-  "/>
-  <path d="M298.2,566c0,2.4-1.5,4.1-3.7,4.1s-3.7-1.7-3.7-4.1c0-2.4,1.5-4.2,3.7-4.2S298.2,563.6,298.2,566z M296.8,566.1
-  L296.8,566.1c0-1.7-0.8-3.1-2.3-3.1s-2.3,1.4-2.3,3v0.1c0,1.6,0.8,2.9,2.3,2.9S296.8,567.6,296.8,566.1z"/>
-  <path d="M299.2,562h1.5l2,6.6l1.9-6.6h1.5l-2.9,9.2c-0.4,1.1-1.1,1.4-2.1,1.4c-0.4,0-0.9,0-1.4-0.1l0.2-1.2c0,0,0.5,0.1,1.1,0.1
-  c0.6,0,0.9-0.2,1-0.8l0.1-0.4L299.2,562z"/>
-  <path d="M308.5,566.4c0.1,1.5,1,2.6,2.5,2.6c0.9,0,1.5-0.3,2.1-0.8l0.7,0.9c-0.7,0.6-1.7,1-2.8,1c-2.3,0-3.8-1.7-3.8-4.1
-  c0-2.4,1.4-4.2,3.6-4.2c2.1,0,3.4,1.7,3.4,4.1v0.4H308.5z M308.5,565.4h4.2c0-1.2-0.7-2.4-2-2.4C309.4,563,308.6,564.1,308.5,565.4
-  z"/>
-  <path d="M321.4,569.1c-0.5,0.7-1.3,1.1-2.3,1.1c-2.1,0-3.4-1.7-3.4-4.1s1.3-4.2,3.4-4.2c1,0,1.9,0.4,2.3,1.1v-4.1h1.3V570h-1.3
-  V569.1z M317.1,566c0,1.7,0.8,2.9,2.3,2.9c1.4,0,2.1-1,2.1-2.3v-1.3c0-1.3-0.7-2.3-2.1-2.3C317.9,563,317.1,564.3,317.1,566
-  L317.1,566z"/>
-</g>
-<g>
   <path d="M159,545.4c0,2.9-1.1,5.7-4.1,5.7s-4.1-2.8-4.1-5.7c0-2.9,1.1-5.8,4.1-5.8S159,542.5,159,545.4z M157.5,545.7v-0.7
   c0-2.7-1-4.2-2.6-4.2c-1.6,0-2.6,1.5-2.6,4.2v0.7c0,2.7,1,4.2,2.6,4.2C156.5,550,157.5,548.4,157.5,545.7z"/>
 </g>
@@ -515,3 +471,6 @@ x="0px" y="0px" width="960px" height="589px" viewBox="0 0 960 589" xml:space="pr
   <rect x="418.2" y="57" fill="#005EA5" width="1" height="475"/>
 </g>
 </svg>
+<div class="graph-label" style="position: relative">
+  <span style="position: absolute; top: -35px; left: 150px; font-size: 16px;">unemployment rate</span>  
+</div>
