--- a/app/views/taxonomy_level/unemployement.html.erb
+++ b/app/views/taxonomy_level/unemployement.html.erb
@@ -362,6 +362,9 @@
     </div>
 
     <img src="/assets/graphs/unemployment-age-16-24.svg">
+    <div class="graph-label" style="position: relative">
+      <span style="position: absolute; top: -35px; left: 150px; font-size: 16px;">unemployment rate</span>  
+    </div>
   </div>
 
 
@@ -399,6 +402,9 @@
     </div>
 
     <img src="/assets/graphs/unemployment-age-24-49.svg">
+    <div class="graph-label" style="position: relative">
+      <span style="position: absolute; top: -35px; left: 150px; font-size: 16px;">unemployment rate</span>  
+    </div>
   </div>
 
   <!-- end of block -->
@@ -434,7 +440,9 @@
     </div>
 
     <img src="/assets/graphs/unemployment-age-49plus.svg">
-
+    <div class="graph-label" style="position: relative">
+      <span style="position: absolute; top: -35px; left: 150px; font-size: 16px;">unemployment rate</span>  
+    </div>
   </div>
 
   <details class="normalize">
@@ -516,7 +524,7 @@
 <div class="grid-row">
   <div class='column-two-thirds'>
     <h2 class='table-name heading-medium'>
-      Unemployment by ethnicity (2002-2015)
+      Unemployment rate by ethnicity (2002-2015)
     </h2>
   </div>
 
