--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,11 +1,11 @@
-// @import 'colours';
-// @import 'font_stack';
-// @import 'measurements';
-// @import 'conditionals';
-// @import 'device-pixels';
-// @import 'grid_layout';
-// @import 'typography';
-// @import 'shims';
+@import 'colours';
+@import 'font_stack';
+@import 'measurements';
+@import 'conditionals';
+@import 'device-pixels';
+@import 'grid_layout';
+@import 'typography';
+@import 'shims';
 
 @import 'design-patterns/alpha-beta';
 @import 'design-patterns/buttons';
