amendments inline with userlab prep

--- a/app/views/taxonomy_level/unemployement.html.erb
+++ b/app/views/taxonomy_level/unemployement.html.erb
@@ -218,10 +218,19 @@
       Summary
     </h3>
     <p>
-      Unemployment has decreased over the past three years for most groups, with the exception of Indian and other Asian people, who have seen a small increase in unemployment. Younger people across all backgrounds have a significantly higher rate of unemployment.
+      Between October and December 2016, Bangladeshi people aged 16+ had the highest unemployment rate (14.3%) - around 30,000 people.
     </p>
+
     <p>
-      In 2015, ethnic minorities have higher rates of unemployment, with people from a black background having the highest unemployment rate at 14%.
+      The rate of unemploymemnt for Bangladeshi people was over 3 times higher than the average for all ethnic groups.
+    </p>
+
+    <p>
+      In the 25-49 age group, the highest unemployment rate was also for Black people at 9.4%, around 74,000 people.
+    </p>
+
+    <p>
+      The lowest unemployment rates was for White people aged 50+ at 3.2%, around 246,000 people.
     </p>
   </div>
 </div>
@@ -319,7 +328,7 @@
       Definition
     </h3>
     <p>
-      Male / Female
+      White, Black, Bangladeshi/Pakistani, Indian, Other ethnic backgrounds. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups
     </p>
   </div>
 
@@ -495,11 +504,11 @@
     </p>
 
     <p>
-      Overall Black 16-24 year olds had the highest unemployment rate at 30%, around 40,000 people in 2015. The second highest unemployment rate was for Pakistani/Bangladeshi 16-24 year olds at 27.1%, around 33,000 people. This is twice the unemployment rate for White 16-24 year olds.
+      Overall Black 16-24 year olds had the highest unemployment rate at 30.3%, around 40,000 people in 2015. The second highest unemployment rate was for Pakistani/Bangladeshi 16-24 year olds at 27.1%, around 33,000 people. This is twice the unemployment rate for White 16-24 year olds.
     </p>
 
     <p>
-      In the 25-49 age group, the highest unemployment rate was also for Black people at 12.1%, around 74,000 people.
+      In the 25-49 age group, the highest unemployment rate was also for Black people at 9.4%, around 74,000 people.
     </p>
 
     <p>
@@ -512,7 +521,7 @@
       Definition
     </h3>
     <p>
-      Age groups are 16-24, 25-49, 50+ to cover everyone of a working age.
+      White, Black African/Caribbean, Mixed, Indian, Pakistani, Bangladeshi, Chinese, Other Asian, Other, Unknown. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups.
     </p>
   </div>
 
@@ -643,20 +652,12 @@
       Summary
     </h3>
     <p>
-      Between October and December 2016, Bangladeshi people aged 16+ had the highest unemployment rate (14.3%) - around 30,000 people.
+      Unemployment has decreased over the past three years for most groups, with the exception of Indian and other Asian people, who have seen a small increase in unemployment. Younger people across all backgrounds have a significantly higher rate of unemployment.
+    </p>
+    <p>
+      In 2015, ethnic minorities have higher rates of unemployment, with people from a black background having the highest unemployment rate at 14%.
     </p>
 
-    <p>
-      The rate of unemploymemnt for Bangladeshi people was over 3 times higher than the average for all ethnic groups.
-    </p>
-
-    <p>
-      In the 25-49 age group, the highest unemployment rate was also for Black people at 12.1%, around 74,000 people.
-    </p>
-
-    <p>
-      The lowest unemployment rates was for White people aged 50+ at 3.2%, around 246,000 people.
-    </p>
     <div class="supporting-information" style="clear: both">
     </div>
   </div>
