amendments inline with userlab prep: tested

--- a/app/views/taxonomy_level/unemployement.html.erb
+++ b/app/views/taxonomy_level/unemployement.html.erb
@@ -673,19 +673,25 @@
       Main points
     </h2>
     <p>
-      Between October and December 2016, Bangladeshi people aged 16+ had the highest unemployment rate (14.3%) - around 30,000 people.
+      In the UK, 4.6% of the total population, aged 16+, were unemployed between October and December, 2016 - which is around 1.5 million people
     </p>
     <p>
-      The rate of unemploymemnt for Bangladeshi people was over 3 times higher than the average for all ethnic groups.
+      The rate of unemployment in the UK has been falling for all ethnic groups and is currently at it lowest level.
     </p>
     <p>
-      Chinese people had the lowest unemployment rate. Between October and December 2016, around 6,000 Chinese people (3.5%), aged 16+, were unemployed. 
+      Bangladeshi people had the highest rates (14.3%) of unemployment between October and December 2016 - around 30,000 people. 
     </p>
     <p>
-      The rate of unemployment for Chinese people was 2.3 times lower than the average for all ethnic minority groups.
+      Bangladeshi people were nearly 3.5 times more likely to be unemployed compared to White people.
     </p>
     <p>
-      Around 1.2 million (4.1%) of White people aged 16+ were unemployed. The rate of unemploymemnt for White people is nearly 2 times lower than rate for all ethnic minority groups.
+      Chinese people had the lowest rates (3.5%) of unemployment - around 6,000 people.
+    </p>
+    <p>
+      The youngest age groups (16-24) have the highest unemployment rates compared to other age groups.
+    </p>
+    <p>
+      Females have higher unemployement rates than men.
     </p>
   </div>
 </div>
